<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.hify</groupId>
    <artifactId>hify</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Hify :: Parent</name>

    <modules>
        <module>hify-common</module>
        <module>hify-model</module>
        <module>hify-mcp</module>
        <module>hify-knowledge</module>
        <module>hify-agent</module>
        <module>hify-conversation</module>
        <module>hify-workflow</module>
        <module>hify-app</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- Core -->
        <spring-boot.version>3.2.5</spring-boot.version>

        <!-- Data -->
        <mybatis-plus.version>3.5.7</mybatis-plus.version>

        <!-- HTTP & Resilience -->
        <okhttp.version>4.12.0</okhttp.version>
        <resilience4j.version>2.2.0</resilience4j.version>

        <!-- Utilities -->
        <guava.version>33.2.1-jre</guava.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
        <lombok.version>1.18.32</lombok.version>

        <!-- Infrastructure -->
        <pgvector.version>0.1.6</pgvector.version>
        <p6spy.version>3.9.1</p6spy.version>
        <opentelemetry.version>1.37.0</opentelemetry.version>

        <!-- Plugin versions -->
        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM：管理 Spring、Lombok、Jackson、MySQL、PostgreSQL 等版本 -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>2.20</version>
            </dependency>

            <!-- Resilience4j BOM -->
            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-bom</artifactId>
                <version>${resilience4j.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- ========== 内部模块 ========== -->
            <dependency>
                <groupId>com.hify</groupId>
                <artifactId>hify-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.hify</groupId>
                <artifactId>hify-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.hify</groupId>
                <artifactId>hify-mcp</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.hify</groupId>
                <artifactId>hify-knowledge</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.hify</groupId>
                <artifactId>hify-agent</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.hify</groupId>
                <artifactId>hify-conversation</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.hify</groupId>
                <artifactId>hify-workflow</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- ========== 第三方依赖 ========== -->
            <!-- MyBatis-Plus（Spring Boot 3 专用版本） -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>

            <!-- OkHttp -->
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${okhttp.version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>logging-interceptor</artifactId>
                <version>${okhttp.version}</version>
            </dependency>

            <!-- Guava（ThreadFactoryBuilder） -->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>

            <!-- MapStruct（DTO 转换，编译期生成，无运行时反射） -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <!-- pgvector JDBC 扩展 -->
            <dependency>
                <groupId>com.pgvector</groupId>
                <artifactId>pgvector</artifactId>
                <version>${pgvector.version}</version>
            </dependency>

            <!-- p6spy：SQL 慢查询拦截，仅 dev/test 使用 -->
            <dependency>
                <groupId>p6spy</groupId>
                <artifactId>p6spy</artifactId>
                <version>${p6spy.version}</version>
            </dependency>

            <!-- OpenTelemetry API/SDK：一期只生成 traceId 串联日志，不接 Exporter -->
            <dependency>
                <groupId>io.opentelemetry</groupId>
                <artifactId>opentelemetry-api</artifactId>
                <version>${opentelemetry.version}</version>
            </dependency>
            <dependency>
                <groupId>io.opentelemetry</groupId>
                <artifactId>opentelemetry-sdk-trace</artifactId>
                <version>${opentelemetry.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- 所有子模块共享：Lombok 编译期注解、MapStruct DTO 转换 -->
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <!-- spring-boot-maven-plugin 只在 hify-app 中激活 repackage，此处仅声明版本 -->
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <!-- 编译插件：指定 Java 版本，配置 Lombok + MapStruct 注解处理器 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                    <!-- Spring Boot 3 / Spring 6 需要 -parameters 保留方法参数名，
                         否则 @RequestParam、构造器注入等无法按参数名匹配 Bean -->
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <!-- MapStruct 必须在 Lombok 之后声明，避免注解处理顺序问题 -->
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </plugin>
        </plugins>
    </build>
</project>
